@@ -1,2 +1,3 @@
-EBUILD couchapp-9999.ebuild 526 RMD160 488e487b1a56953673d3b3fbb1acd2c785bc7000 SHA1 5cde44ba25eec35fee2228c076899c27c9622443 SHA256 758105deb2c734e2eb1233a87f75a3716e709ea63d2ece1951f7a92d47f82433
+EBUILD couchapp-9999.ebuild 531 RMD160 57cb53afdb69069d516e420d444f06e8ddcef4f4 SHA1 81b7c44793efe26eaa1d83569490f3698b471cdd SHA256 3953e34611b2d5d7b57b2acba31574adb633dcc78fe20bc2796adee33100aa5c
+MISC ChangeLog 526 RMD160 8702ee5af17c3f57f72278e90220f0f517c0a675 SHA1 dab33e59c0511ade7b7ddf9d2d096a6a432244ae SHA256 2241cedeb2aaa69805e1969924300200b4e9de7b66fec3c8c93a5b153f8e00af
 MISC couchapp-9999.ebuild~ 739 RMD160 6da6fc422c138a0c30252dd85eb8c77ecc660c3b SHA1 494dd03c713f3fafcb9e6490d32cc8f24efe9019 SHA256 931b70c55d4128146b0b03dd764b6cdf8202ff1b85c51889dfade264b4dd58f4
